src/test/resources/purescript_examples/passing/EmptyRow.purs.psi
FILE
  PureASTWrapperElement(Program)
    PureASTWrapperElement(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PureASTWrapperElement(Qualified)
        PureASTWrapperElement(ModuleName)
          PsiElement(proper name)('Main')
      PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n\n')
      PureASTWrapperElement(DataDeclaration)
        PsiElement(data)('data')
        PsiElement(whitespace)(' ')
        PsiElement(proper name)('Foo')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(TypeArgs)
          PsiElement(identifier)('r')
          PsiElement(whitespace)(' ')
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PsiElement(proper name)('Foo')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(TypeAtom)
          PureASTWrapperElement(ObjectType)
            PsiElement({)('{')
            PsiElement(whitespace)(' ')
            PureASTWrapperElement(Row)
              PsiElement(|)('|')
              PsiElement(whitespace)(' ')
              PureASTWrapperElement(TypeVar)
                PsiElement(identifier)('r')
                PsiElement(whitespace)(' ')
            PsiElement(})('}')
            PsiElement(whitespace)(' \n\n')
      PureASTWrapperElement(TypeDeclaration)
        PsiElement(identifier)('test')
        PsiElement(whitespace)(' ')
        PsiElement(::)('::')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(Type)
          PureASTWrapperElement(TypeAtom)
            PureASTWrapperElement(TypeConstructor)
              PureASTWrapperElement(Qualified)
                PsiElement(proper name)('Foo')
                PsiElement(whitespace)(' ')
          PureASTWrapperElement(TypeAtom)
            PsiElement(()('(')
            PureASTWrapperElement(Row)
              <empty list>
            PsiElement())(')')
            PsiElement(whitespace)('\n')
      PureASTWrapperElement(ValueDeclaration)
        PsiElement(identifier)('test')
        PsiElement(whitespace)(' ')
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(Value)
          PureASTWrapperElement(PrefixValue)
            PureASTWrapperElement(Constructor)
              PureASTWrapperElement(Qualified)
                PsiElement(proper name)('Foo')
                PsiElement(whitespace)(' ')
            PureASTWrapperElement(ObjectLiteral)
              PsiElement({)('{')
              PsiElement(})('}')
              PsiElement(whitespace)('\n\n')
      PureASTWrapperElement(ValueDeclaration)
        PsiElement(identifier)('main')
        PsiElement(whitespace)(' ')
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(Value)
          PureASTWrapperElement(PrefixValue)
            PureASTWrapperElement(Var)
              PureASTWrapperElement(Qualified)
                PureASTWrapperElement(ModuleName)
                  PsiElement(proper name)('Debug')
                  PsiElement(.)('.')
                PureASTWrapperElement(ModuleName)
                  PsiElement(proper name)('Trace')
                  PsiElement(.)('.')
                PsiElement(identifier)('trace')
                PsiElement(whitespace)(' ')
            PureASTWrapperElement(StringLiteral)
              PsiElement(string)('"Done"')
              PsiElement(whitespace)('\n')
